adding some wallpapers and changes to kitty terminal config file

--- a/kitty-terminal-confs/kitty.conf
+++ b/kitty-terminal-confs/kitty.conf
@@ -1,5 +1,8 @@
 include ./theme.conf
 
+/* configure padding for window */
+window_padding_width 0 5
+
 confirm_os_window_close 0
 
 remember_window_size no
@@ -24,15 +27,9 @@ map ctrl+shift+z toggle_layout stack
 
 # enabled_layouts *
 enabled_layouts tall,fat,grid,horizontal,vertical,stack
-# enabled_layouts tall:bias=50;full_size=1;mirrored=false
-# enabled_layouts vertical
-# enabled_layouts horizontal
-# enabled_layouts fat:bias=50;full_size=1;mirrored=false
 
 map F5 launch --location=hsplit
 map F6 launch --location=vsplit
-map F4 launch --location=split
-map F12 layout_action rotate
 
 map ctrl+[ layout_action_decrease_num_full_size_windows
 map ctrl+] layout_action_increase_num_full_size_windows
@@ -47,24 +44,27 @@ map shift+right resize_window wider
 map shift+up resize_window taller
 map shift+down resize_window shorter
 
-
 # hide window decorations
 hide_window_decorations n
 
-#background_opacity=0.7
 
-#font_family MesloLGs NF
-font_family Cascadia Code PL
-bold_font auto
-italic_font auto
+# setup a good font 
+font_size 12
+font_family JetBrainsMono Nerd Font
+bold_font        auto
+italic_font      auto
 bold_italic_font auto
+/* list of fonts that show icons appropriately */
+/* font_family FiraCode Nerd Font */
+/* font_family InconsolataGo Nerd Font */
+/* font_family CaskaydiaCove Nerd Font */
+/* font_family Hack Nerd Font  */
 
-font_size 11.0
 
 adjust_line_height 0
 adjust_column_width 0
 
-adjust_baseline 0
+# adjust_baseline 0
 
 disable_ligatures never
 enable_audio_bell no
@@ -108,6 +108,6 @@ map ctrl+8 goto_tab 8
 map ctrl+9 goto_tab 9
 
 # BEGIN_KITTY_THEME
-# Doom Vibrant
+# One Dark
 include current-theme.conf
 # END_KITTY_THEME
