--- a/starship.toml
+++ b/starship.toml
@@ -1,6 +1,76 @@
+# Get editor completions based on the config schema
+# "$schema" = 'https://starship.rs/config-schema.json'
+format = """
+$line_break\
+$username\
+$hostname\
+$localip\
+$shlvl\
+$directory\
+$git_branch\
+$git_commit\
+$git_state\
+$git_metrics\
+$git_status\
+$hg_branch\
+$package\
+$c\
+$cmake\
+$haskell\
+$lua\
+$nim\
+$nodejs\
+$conda\
+$python\
+$rust\
+$memory_usage\
+$env_var\
+$custom\
+$container\
+$sudo\
+$fill\
+$cmd_duration $jobs $time\
+$line_break\
+$battery\
+$status\
+$shell\
+$character"""
+
+add_newline = false
+
+[fill]
+symbol = "."
+style = "bold green"
+
+[line_break]
+disabled = false
+
+[username]
+style_user = "bold yellow"
+style_root = "bold red"
+format = " [╭─$user]($style)@"
+disabled = false
+show_always = true
+
+
+[hostname]
+ssh_only = false
+format = "[$hostname]($style) in (bold red)"
+# format = '[$ssh_symbol](bold blue) on [$hostname](bold green) '
+disabled = false
+trim_at = "-"
+
 [character]
-success_symbol = "[❯](bold green) "
-error_symbol = "[✗](bold red) "
+error_symbol = "×(bold red)"
+# success_symbol = " [λ ](bold green)"
+success_symbol = " [╰─λ ](bold yellow)"
+
+[time]
+disabled = false
+format = '[\[ $time \]]($style) '
+# format = '🕙[\[ $time \]]($style) '
+time_format = "%T"
+utc_time_offset = "+8" # for China
 
 [memory_usage]
 disabled = false
@@ -27,40 +97,30 @@ threshold = 30
 style = "bold yellow"
 discharging_symbol = "💦"
 
+[cmd_duration]
+min_time = 120
+format = "[$duration](bold yellow)"
+# min_time = 500
+# format = "underwent [$duration](bold yellow)"
 
-[time]
-disabled = false
-format = '🕙[\[ $time \]]($style) '
-time_format = "%T"
-utc_time_offset = "-5"
-
-[username]
-style_user = "bold yellow"
-style_root = "bold red"
-# format = '[$user]($style) '
-format = " [\u256d\u2500$user]($style)@"
-disabled = false
-show_always = true
-
-[hostname]
-ssh_only = false
-format = "[$hostname]($style) in "
-# format = '[$ssh_symbol](bold blue) on [$hostname](bold green) '
-disabled = false
-trim_at = "-"
+# [localip]
+# ssh_only = false
+# # format = "@[$localipv6](bold red) "
+# format = "@[$localipv4](bold red) "
+# disabled = true
 
 [directory]
 style = "blue"
 truncate_to_repo = true
 truncation_length = 2
-truncation_symbol = "../"
+truncation_symbol = "..."
+# truncation_symbol = "../"
 
 # [python]
 # symbol = " "
 
 [conda]
-symbol = "\U0001f47e "
-# symbol="\U0001f40d "
+symbol = "👾 "
 
 # [c]
 # symbol = " "
