--- a/starship.toml
+++ b/starship.toml
@@ -1,73 +1,48 @@
-# Get editor completions based on the config schema
-# "$schema" = 'https://starship.rs/config-schema.json'
-format = """
-$line_break\
-$username\
-$hostname\
-$localip\
-$shlvl\
-$directory\
-$git_branch\
-$git_commit\
-$git_state\
-$git_metrics\
-$git_status\
-$hg_branch\
-$package\
-$c\
-$cmake\
-$haskell\
-$lua\
-$nim\
-$nodejs\
-$conda\
-$python\
-$rust\
-$memory_usage\
-$env_var\
-$custom\
-$container\
-$sudo\
-$fill\
-$cmd_duration $jobs $time\
-$line_break\
-$battery\
-$status\
-$shell\
-$character"""
 
+format = """
+[┌─\\(](green)$directory$git_branch$git_status$memory_usage$conda$cmd_duration[\\)](green)$fill[\\(](green)$username$hostname$sudo[\\)](green)
+[└─\\(](green)$time[\\)-](green)$character"""
 add_newline = false
 
+[git_branch]
+style = "bold #c678dd"
+format = " [$symbol$branch]($style) "
+
+[git_status]
+style = "bold #c678dd"
+format = '([$all_status$ahead_behind]($style))'
+
 [fill]
-symbol = "."
+symbol = " "
 style = "bold green"
 
 [line_break]
 disabled = false
 
 [username]
-style_user = "bold yellow"
+# style_user = "bold blue"
+style_user = "bold #abb2bf"
 style_root = "bold red"
-format = " [╭─$user]($style)@"
+format = " [$user]($style)@"
 disabled = false
 show_always = true
 
 
 [hostname]
 ssh_only = false
-format = "[$hostname]($style) in (bold red)"
-# format = '[$ssh_symbol](bold blue) on [$hostname](bold green) '
+style = "bold #E06C75"
+format = "[$hostname]($style) "
 disabled = false
 trim_at = "-"
 
 [character]
-error_symbol = "×(bold red)"
-# success_symbol = " [λ ](bold green)"
-success_symbol = " [╰─λ ](bold yellow)"
+error_symbol = "[×](bold red)"
+success_symbol = "[>](green)"
 
 [time]
 disabled = false
-format = '[\[ $time \]]($style) '
+style = "bold #56B6C2"
+format = '[$time]($style)'
 # format = '🕙[\[ $time \]]($style) '
 time_format = "%T"
 utc_time_offset = "+8" # for China
@@ -76,7 +51,7 @@ utc_time_offset = "+8" # for China
 disabled = false
 threshold = -1
 symbol = "🐏"
-style = "bold dimmed blue"
+style = "bold #42b983"
 
 [sudo]
 style = "bold red"
@@ -99,9 +74,7 @@ discharging_symbol = "💦"
 
 [cmd_duration]
 min_time = 120
-format = "[$duration](bold yellow)"
-# min_time = 500
-# format = "underwent [$duration](bold yellow)"
+format = "[$duration](bold #61afef)"
 
 # [localip]
 # ssh_only = false
@@ -110,10 +83,11 @@ format = "[$duration](bold yellow)"
 # disabled = true
 
 [directory]
-style = "blue"
+# style = "bold #e5c07b"
+style = "bold #d19a66"
 truncate_to_repo = true
-truncation_length = 2
-truncation_symbol = "..."
+truncation_length = 3
+truncation_symbol = "./"
 # truncation_symbol = "../"
 
 # [python]
