updating some configuration files

--- a/dotfiles/tlp.conf
+++ b/dotfiles/tlp.conf
@@ -446,7 +446,7 @@ RUNTIME_PM_ON_AC=auto
 # Separate multiple devices with spaces.
 # Default: <none>
 
-#DEVICES_TO_DISABLE_ON_STARTUP="bluetooth nfc wifi wwan"
+DEVICES_TO_DISABLE_ON_STARTUP="bluetooth"
 
 # Radio devices to enable on startup: bluetooth, nfc, wifi, wwan.
 # Separate multiple devices with spaces.
