--- a/kitty/kitty.conf
+++ b/kitty/kitty.conf
@@ -1,15 +1,51 @@
-# include ./theme.conf
+# kitty conf file
+# R. Torres-Escobedo
+shell fish
+
+font_size 11.5
+# font_family JetBrainsMono Nerd Font
+font_family JetBrains Mono
+#
+# modify cell heigh
+modify_font cell_height 110%
+
+# font_size 11.5
+# font_family GeistMono Nerd Font
+
+# font_family FantasqueSansM Nerd Font
+# font_size 13
+
+# font_size 13.0
+# font_family ZedMono Nerd Font
+
+# font_size 11.5
+# font_family Fira Code
+# font_features Fira Code +cv02 +cv05 +cv09 +cv14 +ss04 +cv16 +cv31 +cv25 +cv26 +cv32 +cv28 +ss10 +zero +onum
+
+tab_bar_min_tabs            2
+tab_bar_edge                bottom
+tab_bar_style               powerline
+tab_powerline_style         slanted
+tab_title_template          {title}{' :{}:'.format(num_windows) if num_windows > 1 else ''}
+
+
+# open links 
+map  ctrl+shift+e open_url_with_hints
+
+# hyperlinks
+show_hyperlink_targets yes
 
 # connections to single server can be shared
 share_connections yes
 
 # cursor shape 
-cursor_shape beam
+cursor_shape block
+# cursor_shape beam
 
 scrollback_lines 2000
 
 # configure padding for window
-window_padding_width 2 8
+window_padding_width 1 1
 
 confirm_os_window_close 0
 
@@ -21,37 +57,49 @@ window_alert_on_bell yes
 
 # wayland borders look weird with Kitty terminal
 # use the X11 window system instead
-# linux_display_server x11
-# wayland_titlebar_color system
+linux_display_server auto
+# wayland_titlebar_color  system
+# wayland_titlebar_color  #242424
 
 # example of how to include an background with an image
-# background_image /home/rtorres/Pictures/Wallpaper-Collection/archer_girl.png
-# background_image_layout scaled
-map ctrl+shift+l next_layout
-map ctrl+shift+t goto_layout tall
-map ctrl+shift+s goto_layout stack
-map ctrl+shift+p last_used_layout
-map ctrl+shift+z toggle_layout stack
+# background_image /home/rtorres/Pictures/New Wallpaper Collection/monster_trio.png
+# background_image /home/rtorres/Pictures/New Wallpaper Collection/luffys_hat.png
+# background_tint 0.7
+# background_image_layout centered
+# background_opacity 0.85
+
+# map ctrl+shift+l next_layout
+# map ctrl+shift+t goto_layout tall
+# map ctrl+shift+s goto_layout stack
+# map ctrl+shift+p last_used_layout
+# map ctrl+shift+z toggle_layout stack
 # layout tall
 
 # enabled_layouts *
 enabled_layouts tall,fat,grid,horizontal,vertical,stack
 
-map ctrl+alt+\ launch --location=hsplit
-map ctrl+alt+- launch --location=vsplit
+# map ctrl+alt+\ launch --location=hsplit
+# map ctrl+shift+\ launch --location=hsplit
+# map ctrl+\ launch --location=hsplit
+# map ctrl+shift+\ launch --location=vsplit
 
 map ctrl+[ layout_action_decrease_num_full_size_windows
 map ctrl+] layout_action_increase_num_full_size_windows
-map alt+k neighboring_window up
-map alt+j neighboring_window down
-map alt+h neighboring_window left
-map alt+l neighboring_window right
-map ctrl+shift+up move_window up
-map ctrl+shift+down move_window down
-map shift+left resize_window narrower
-map shift+right resize_window wider
-map shift+up resize_window taller
-map shift+down resize_window shorter
+
+# tiling
+# map alt+k neighboring_window up
+# map alt+j neighboring_window down
+# map alt+h neighboring_window left
+# map alt+l neighboring_window right
+
+#moving windows in tiling window mode
+# map ctrl+shift+up move_window up
+# map ctrl+shift+down move_window down
+# map alt+- resize_window narrower
+# map alt+= resize_window wider
+# map ctrl+home resize_window reset
+
+#resize tiles
 
 map ctrl+shift+f toggle_fullscreen
 
@@ -59,55 +107,22 @@ map ctrl+shift+f toggle_fullscreen
 hide_window_decorations n
 
 
-# setup a good font 
-# font_family Dank Mono 
-# italic_font auto
-# bold_font auto
-# bold_italic_font auto
-
-font_size 13
-
-# font_family Hasklug Nerd Font
-# font_family FiraCode Nerd Font
-
-# font_family JetBrainsMono Nerd Font
-# italic_font JetBrains Mono Italic Nerd Font Complete
-# bold_font JetBrains Mono Bold Nerd Font Complete
-# bold_italic_font JetBrains Mono Bold Italic Nerd Font Complete
-
-font_family       Victor Mono SemiBold Nerd Font Complete 
-italic_font       Victor Mono SemiBold Italic Nerd Font Complete
-bold_font         Victor Mono Bold Nerd Font Complete
-bold_italic_font  Victor Mono Bold Italic Nerd Font Complete
-
-# font_family BlexMono Nerd Font
-# italic_font Blex Mono Medium Italic Nerd Font Complete
-# bold_font Blex Mono Bold Nerd Font Complete
-# bold_italic_font Blex Mono Bold Italic Nerd Font Complete
-
-# list of fonts that show icons appropriately
-# font_family       Iosevka Semibold Nerd Font Complete
-# font_family       Iosevka Nerd Font Complete
-# italic_font       Iosevka Italic Nerd Font Complete
-# bold_font         Iosevka Term Heavy Nerd Font Complete
-# bold_italic_font  Iosevka Term Extrabold Oblique Nerd Font Complete
-
-# font_family Lilex Nerd Font
-# font_family FantasqueSansMono Nerd Font 
-# font_family InconsolataGo Nerd Font 
-# font_family CaskaydiaCove Nerd Font
-
 adjust_line_height 0
 adjust_column_width 0
-
-# adjust_baseline 0
 
 disable_ligatures never
 enable_audio_bell no
 
 map ctrl+shift+c copy_to_clipboard
+
+# copy_on_select a1
+# map shift+up resize_window taller
+# map shift+down resize_window shorter
+# map ctrl+shift+v paste_from_buffer a1
 map ctrl+shift+v paste_from_clipboard
 map ctrl+shift+y paste_from_selection
+
+paste_actions quote-urls-at-prompt
 
 map ctrl+shift+k scroll_line_up
 map ctrl+shift+j scroll_line_down
@@ -120,45 +135,10 @@ map ctrl+shift+end scroll_end
 
 map ctrl+shift+n
 
-# map ctrl+[ previous_window
-# map ctrl+] next_window
-
-#jump to beginning and end of the word
-map ctrl+left send_text all \x1b\x62
-map ctrl+right send_text all \x1b\x66
-
-#jump to beginning and end of line
-map ctrl+a send_text all \x01
-map ctrl+e send_text all \x05
-
-tab_bar_edge bottom 
-# map ctrl+t new_tab_with_cwd !neighbor
-map ctrl+t new_tab !neighbor
-
-map ctrl+1 goto_tab 1
-map ctrl+2 goto_tab 2
-map ctrl+3 goto_tab 3
-map ctrl+4 goto_tab 4
-map ctrl+5 goto_tab 5
-map ctrl+6 goto_tab 6
-map ctrl+7 goto_tab 7
-map ctrl+8 goto_tab 8
-map ctrl+9 goto_tab 9
-
-# open links 
-map  ctrl+shift+e open_url_with_hints
-
-# tokyodark theme
-# include /home/rtorres/tokyodark.nvim/extra/kitty/tokyodark.conf
-# include /home/rtorres/minimal.nvim/terminal/kitty-minimal.conf
-# include /home/rtorres/kitty-palenight/palenight.conf
-# include /home/rtorres/sonokai-kitty/colors/sonokai-atlantis.conf
-# include /home/rtorres/sonokai-kitty/colors/sonokai-andromeda.conf
-# include /home/rtorres/Kitty-theme/kitty.conf
-# include /home/rtorres/kanagawa.nvim/extras/kanagawa.conf
-# include /home/rtorres/catppuccin-customization/kitty/mocha.conf
-
 # BEGIN_KITTY_THEME
-# Ayu Mirage
+# Catppuccin-Mocha
 include current-theme.conf
 # END_KITTY_THEME
+
+# wayland_titlebar_color #242424
+wayland_titlebar_color #11111B
